--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "connected-react-router": "^6.9.1",
+        "hoidanit-frontend-server": "file:server",
         "jquery": "^3.6.0",
         "lodash": "^4.17.21",
         "markdown-it": "^12.1.0",
@@ -45,10 +46,12 @@
         "typescript": "^4.3.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "dev": "react-scripts start",
+        "start": "serve -s build",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject",
+        "heroku-postbuild": "npm run build"
     },
     "eslintConfig": {
         "extends": "react-app"
